[project]
name = "youtube-analysis"
version = "0.2.0"
description = "Personal YouTube history as a testbed for content quality triage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.0.0",
]
